infrastructure/base/scaling/goldilocks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    goldilocks.fairwinds.com/enabled: "true"
