infrastructure/base/scaling/goldilocks/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: goldilocks
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - goldilocks${clusterServicesDNSSuffix,,}
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
